expand to build on multiple jdk's